# nonebot-plugin-afd

./: pyproject.toml  pyrightconfig.json
nonebot_plugin_afd/: __init__.py  command.py  config.py  file_init.py  group_new_member.py  model.py  order_notice.py  utils.py
